# hoa-tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  LICENSE.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: publish.yml  tests.yml
docs/: api.md  api.rst  conf.py  development.md  development.rst  how_to.md  index.md  index.rst  release-notes.md  tutorial.rst  tutorials.rst
docs/_static/: hoa-style.css
docs/api/: dataset.md  index.md  inventory.md  inventory.rst  metadata.md  types.md  voi.md
docs/tutorial/: coordinates.rst  dataset.py  fetching_data.py  fetching_data.rst  index.md  inventory.py  inventory.rst  registration.py  vois.py
docs/tutorials/: dataset.rst  fetching_data.rst  inventory.rst
src/hoa_tools/: __init__.py  _n5.py  coordinates.py  dataset.py  inventory.py  metadata.py  registration.py  types.py  voi.py
src/hoa_tools/data/: hoa_inventory.csv
src/hoa_tools/tests/: test_dataset.py  test_inventory.py
tests/: test_dataset.py  test_inventory.py  test_n5.py  test_registration.py  test_voi.py
tests/cassettes/: test_remote_array.yaml  test_remote_array_zarr.yaml
