[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/hoa_tools/_version.py"

[dependency-groups]
dev = ["hoa-tools[docs,dev,test]"]

[project]
authors = [{ email = "d.stansby@ucl.ac.uk", name = "David Stansby" }]
classifiers = [
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "dask[array]",
  "gcsfs>2023",
  "networkx>=3",
  "pandas>=2",
  "pydantic>=2",
  "simpleitk",
  "xarray",
  "zarr<3,>2.16",
]
description = "Tools for working with the Human Organ Atlas"
dynamic = ["version"]
keywords = []
name = "hoa-tools"
optional-dependencies = { dev = [
  "build",
  "mypy",
  "pre-commit",
  "ruff",
  "jupyterlab",
  "jupytext",
  "types-networkx",
  "pandas-stubs",
  "datamodel-code-generator",
], docs = [
  "mkdocs",
  "mkdocstrings-python",
  "mkdocs-material",
  "mkdocs-jupyter",
  "griffe-pydantic",
  # Packages needed for tutorial
  "matplotlib",
  "numpydoc",
  "scikit-image",
], test = [
  "matplotlib",
  "pytest",
  "pytest-accept",
  "pytest-cov",
  "pytest-doctestplus",
  "pytest-vcr",
  "scikit-image",
] }
readme = "README.md"
requires-python = ">=3.11"
license.file = "LICENSE.md"
urls.homepage = "https://github.com/HumanOrganAtlas/hoa-tools"

[tool.codespell]
skip = 'schemas/*'

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--color=yes",
  "--cov=hoa_tools",
  "--cov-report=xml",
  "--verbose",
  "--doctest-rst",
  "-vv",
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
  "error",
  # coming from simpleITK
  "ignore:builtin type Swig.* has no __module__ attribute:DeprecationWarning",
]

[tool.coverage]
report = { sort = "cover" }
run = { branch = true, parallel = true, source = ["hoa_tools"] }
paths.source = ["src/hoa_tools"]

[tool.mypy]
exclude = ['docs/_build.*']
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "hoa_tools.metadata"
disallow_any_generics = false # See https://github.com/koxudaxi/datamodel-code-generator/issues/1546

[[tool.mypy.overrides]]
module = "zarr.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gcsfs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "SimpleITK.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true
